--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "migrate:init": "prisma init --datasource-provider sqlite",
     "migrate": "prisma migrate dev --name init",
-    "migrate:reset": "prisma migrate reset"
+    "migrate:reset": "prisma migrate reset",
+    "migrate:schema": "prisma generate",
+    "migrate:push": "prisma db push"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
