--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migrate:init": "prisma init --datasource-provider sqlite",
     "migrate": "prisma migrate dev --name init",
     "migrate:reset": "prisma migrate reset",
-    "migrate:schema": "prisma generate --schema ./prisma/schema.prisma",
+    "migrate:schema": "prisma generate",
     "migrate:push": "prisma db push"
   },
   "dependencies": {
